--- a/index.html
+++ b/index.html
@@ -1,11 +1,8 @@
 <html>
-
 <head>
-
 </head>
-
-
 <body>
+	<script type="text/javascript">console.log("begin");</script>
 	
 <p>hallo</p>
 <p><a href="/href.html">href</a></p>
