--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 </head>
 <body>
 	<script type="text/javascript">console.log("begin");</script>
+	<script src="/socket.io/socket.io.js"></script>
 	
-<p>hallo</p>
+<p>1</p>
 <p><a href="/href.html">href</a></p>
 
 
