--- a/index.html
+++ b/index.html
@@ -3,12 +3,25 @@
 </head>
 <body>
 	<script type="text/javascript">console.log("begin");</script>
-	<script src="/socket.io/socket.io.js"></script>
 	
-<p>2</p>
+	
+<p>3</p>
 <p><a href="/href.html">href</a></p>
+	
+<script type="text/javascript">
+
+var socket = io.connect();
+
+socket.on('success', function ()
+{
+	console.log("Success! socket.on");
+});
 
 
+</script>
+
+	
+	
 </body>
 
 </html>
