--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <html>
 <head>
+	<script type="text/javascript">console.log("begin");</script>
+	<script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 	<script type="text/javascript">console.log("begin");</script>
@@ -8,18 +10,6 @@
 <p>3</p>
 <p><a href="/href.html">href</a></p>
 	
-<script type="text/javascript">
-
-var socket = io.connect();
-
-socket.on('success', function ()
-{
-	console.log("Success! socket.on");
-});
-
-
-</script>
-
 	
 	
 </body>
